--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	helper = osxkeychain
 [user]
 	name = Conor OKelly
-	email = cokelly@murex.com
+	email = okellyconor@gmail.com
 [push]
 	default = simple
 [alias]
